[package]
name = "diagnostic"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = { git = "https://github.com/oberien/rust-typed-arena#faff712" }
codespan-reporting = "0.9.5"
backtrace = "0.3.50"
